use uuid::Uuid;

#[derive(Debug, Clone)]
pub struct TurnId {
    value: String,
}

impl TurnId {
    pub fn new(value: String) -> Self {
        Self::validate(&value);
        Self { value }
    }

    pub fn value(&self) -> &str {
        &self.value
    }

    fn validate(value: &str) {
        if value.is_empty() {
            panic!("TurnIdが空文字です");
        }
        if Uuid::parse_str(value).is_err() {
            panic!("TurnIdがUUID形式ではありません");
        }
    }
}

impl PartialEq for TurnId {
    fn eq(&self, other: &Self) -> bool {
        self.value == other.value
    }
}

impl Eq for TurnId {}
